# joint-client-python

./: .env.sample  .gitignore  .license-header.txt  .licenserc.yaml  .pre-commit-config.yaml  AGENTS.md  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yaml  config.sample.yaml  pyproject.toml  typos.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md
notebooks/: forecast_csv.ipynb  forecast_mean.ipynb  forecast_quantiles.ipynb  forecast_samples.ipynb  forecast_trading.ipynb  health_check.ipynb  history.csv  pandas_result_conversion.ipynb  predict_json.ipynb  service_health.ipynb
scripts/: insert_license.py  insert_license_notebooks.py  validate_distribution.py
src/jointfm_client/: __init__.py  adapters.py  capabilities.py  cli.py  client.py  configuration.py  contract.py  exceptions.py  notebooks.py  py.typed  settings.py  transport.py
tests/: conftest.py  test_capabilities.py  test_cli.py  test_configuration.py  test_contract.py  test_contract_models.py  test_fixture_compatibility.py  test_live_smoke.py  test_notebooks.py  test_settings.py  test_surfaces.py  test_transport.py
tests/fixtures/: forecast_mean_request.json  forecast_mean_response.json  forecast_quantiles_request.json  forecast_quantiles_response.json  forecast_samples_request.json  forecast_samples_response.json  health_metadata.json  input_size_exceeded_response.json  model_version_mismatch_response.json  schema_version_mismatch_response.json  validation_error_response.json
